[COM_INSTALLER] Adding a tab for Migrations

--- a/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
+++ b/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
@@ -47,6 +47,8 @@ COM_INSTALLER_INSTALL_URL="Install URL"
 COM_INSTALLER_INVALID_EXTENSION_UPDATE="Invalid extension update"
 COM_INSTALLER_LABEL_HIDEPROTECTED_DESC="Hide protected extensions. Protected extensions can't be uninstalled."
 COM_INSTALLER_LABEL_HIDEPROTECTED_LABEL="Hide protected extensions"
+
+; Messages
 COM_INSTALLER_MSG_DESCFTP="For installing or uninstalling Extensions, the CMS will most likely need your FTP account details. Please enter them in the form fields below."
 COM_INSTALLER_MSG_DESCFTPTITLE="FTP Login Details"
 COM_INSTALLER_MSG_DATABASE_CHECKED_OK="%s database changes were checked successfully."
@@ -131,12 +133,18 @@ COM_INSTALLER_NO_INSTALL_TYPE_FOUND="No Install Type Found"
 COM_INSTALLER_PACKAGE_DOWNLOAD_FAILED="Package download failed: %s"
 COM_INSTALLER_PACKAGE_FILE="Package File"
 COM_INSTALLER_PURGED_UPDATES="Purged updates"
+COM_INSTALLER_MSG_MIGRATIONS_FILE_NOT_FOUND="File not found"
+
+; Submenu
 COM_INSTALLER_SUBMENU_DATABASE="Database"
 COM_INSTALLER_SUBMENU_DISCOVER="Discover"
 COM_INSTALLER_SUBMENU_INSTALL="Install"
 COM_INSTALLER_SUBMENU_MANAGE="Manage"
 COM_INSTALLER_SUBMENU_UPDATE="Update"
 COM_INSTALLER_SUBMENU_WARNINGS="Warnings"
+COM_INSTALLER_SUBMENU_MIGRATIONS="Migrations"
+
+; Titles
 COM_INSTALLER_TITLE_DATABASE="Extension manager - Database"
 COM_INSTALLER_TITLE_DISCOVER="Extension manager - Discover"
 COM_INSTALLER_TITLE_INSTALL="Extension manager - Install"
@@ -144,10 +152,17 @@ COM_INSTALLER_TITLE_LANGUAGES="Extension manager - Install Languages"
 COM_INSTALLER_TITLE_MANAGE="Extension manager - Manage"
 COM_INSTALLER_TITLE_UPDATE="Extension manager - Update"
 COM_INSTALLER_TITLE_WARNINGS="Extension manager - Warnings"
+COM_INSTALLER_TITLE_MIGRATIONS="Extension manager - Migrations"
+
+; Toolbar
 COM_INSTALLER_TOOLBAR_DISCOVER="Discover"
 COM_INSTALLER_TOOLBAR_FIND_UPDATES="Find Updates"
 COM_INSTALLER_TOOLBAR_UPDATE="Update"
 COM_INSTALLER_TOOLBAR_DATABASE_FIX="Fix"
+COM_INSTALLER_TOOLBAR_MIGRATE_UP="Force run UP on selected migrations"
+COM_INSTALLER_TOOLBAR_MIGRATE_DOWN="Force run DOWN on selected migrations"
+
+; Type
 COM_INSTALLER_TYPE_CLIENT="Location"
 COM_INSTALLER_TYPE_COMPONENT="Component"
 COM_INSTALLER_TYPE_FILE="File"
