[COM_CONFIG] Adding missing lang strings, style fixes, removing deprecated code

--- a/core/bootstrap/Administrator/language/en-GB/en-GB.lib_joomla.ini
+++ b/core/bootstrap/Administrator/language/en-GB/en-GB.lib_joomla.ini
@@ -301,13 +301,17 @@ JLIB_FORM_VALUE_CACHE_FILE="File"
 JLIB_FORM_VALUE_CACHE_MEMCACHE="Memcache"
 JLIB_FORM_VALUE_CACHE_WINCACHE="Windows Cache"
 JLIB_FORM_VALUE_CACHE_XCACHE="XCache"
+JLIB_FORM_VALUE_CACHE_NONE="(none)"
+JLIB_FORM_VALUE_CACHE_MEMORY="PHP Memory"
 JLIB_FORM_VALUE_SESSION_APC="Alternative PHP Cache"
 JLIB_FORM_VALUE_SESSION_DATABASE="Database"
 JLIB_FORM_VALUE_SESSION_EACCELERATOR="eAccelerator"
 JLIB_FORM_VALUE_SESSION_MEMCACHE="Memcache"
-JLIB_FORM_VALUE_SESSION_NONE="None"
+JLIB_FORM_VALUE_SESSION_NONE="(none)"
 JLIB_FORM_VALUE_SESSION_WINCACHE="Windows Cache"
 JLIB_FORM_VALUE_SESSION_XCACHE="XCache"
+JLIB_FORM_VALUE_SESSION_REDIS="Redis"
+JLIB_FORM_VALUE_SESSION_FILE="File"
 JLIB_FORM_VALUE_TIMEZONE_UTC="Universal Time, Coordinated (UTC)"
 
 JLIB_HTML_ACCESS_MODIFY_DESC_CAPTION_ACL="ACL"
