--- a/core/bootstrap/Site/language/en-GB/en-GB.lib_joomla.ini
+++ b/core/bootstrap/Site/language/en-GB/en-GB.lib_joomla.ini
@@ -301,6 +301,8 @@ JLIB_FORM_VALUE_CACHE_FILE="File"
 JLIB_FORM_VALUE_CACHE_MEMCACHE="Memcache"
 JLIB_FORM_VALUE_CACHE_WINCACHE="Windows Cache"
 JLIB_FORM_VALUE_CACHE_XCACHE="XCache"
+JLIB_FORM_VALUE_CACHE_NONE="(none)"
+JLIB_FORM_VALUE_CACHE_MEMORY="PHP Memory"
 JLIB_FORM_VALUE_SESSION_APC="Alternative PHP Cache"
 JLIB_FORM_VALUE_SESSION_DATABASE="Database"
 JLIB_FORM_VALUE_SESSION_EACCELERATOR="eAccelerator"
