--- a/components/com_tags/admin/language/en-GB/en-GB.com_tags.ini
+++ b/components/com_tags/admin/language/en-GB/en-GB.com_tags.ini
@@ -129,7 +129,9 @@ COM_TAGS_GROUP_SINGLE_SELECT_RADIO="single-select (radio)"
 COM_TAGS_GROUP_MULTI_SELECT="multiple-select (checkbox)"
 COM_TAGS_GROUP_UNTIL_DEPTH="until depth"
 COM_TAGS_GROUP_RESOURCE_TYPES="Show for resource types"
+COM_TAGS_GROUP_PUBLICATION_TYPES="Show for publication types"
 COM_TAGS_GROUP_SELECTION_TYPE="Selection type"
+COM_TAGS_GROUP_REQUIREMENT="Requirement"
 COM_TAGS_GROUP_EXPLANATION="<p>By default, there is one focus area group, named &quot;focus area&quot;, that is shown for every resource on the site during the contribution process, prompting the user to select from the available areas to categorize their submission.</p><p>Here, you can change the properties of this group or add additional groups of focus areas.</p><p>For each group, you may choose which types of resources are valid for the group, and at what depth to consider the group mandatory. (Tags that are nested more deeply than the mandatory level will be presented as a box of optional, multiple-selection choices).</p>"
 
 ; Tagged
