--- a/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.sys.ini
+++ b/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.sys.ini
@@ -5,3 +5,11 @@
 
 COM_INSTALLER="Installation Manager"
 COM_INSTALLER_XML_DESCRIPTION="Installer component for adding, removing and upgrading extensions"
+COM_INSTALLER_PACKAGES_PACKAGE="Package"
+COM_INSTALLER_PACKAGES_BASIC_INFO="Basic Info"
+COM_INSTALLER_PACKAGES_INSTALLED_VERSION="Installed Version"
+COM_INSTALLER_PACKAGES_AVAILABLE_VERSIONS="Available Versions"
+COM_INSTALLER_PACKAGES_RELEASE_DATE="Released"
+COM_INSTALLER_PACKAGES_TYPE="Type"
+COM_INSTALLER_PACKAGES_AUTHORS="Authors"
+
