Adding missing language string

--- a/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
+++ b/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
@@ -143,6 +143,7 @@ COM_INSTALLER_SUBMENU_MANAGE="Manage"
 COM_INSTALLER_SUBMENU_UPDATE="Update"
 COM_INSTALLER_SUBMENU_WARNINGS="Warnings"
 COM_INSTALLER_SUBMENU_MIGRATIONS="Migrations"
+COM_INSTALLER_SUBMENU_PACKAGES="Packages"
 
 ; Titles
 COM_INSTALLER_TITLE_DATABASE="Extension manager - Database"
@@ -153,6 +154,7 @@ COM_INSTALLER_TITLE_MANAGE="Extension manager - Manage"
 COM_INSTALLER_TITLE_UPDATE="Extension manager - Update"
 COM_INSTALLER_TITLE_WARNINGS="Extension manager - Warnings"
 COM_INSTALLER_TITLE_MIGRATIONS="Extension manager - Migrations"
+COM_INSTALLER_TITLE_PACKAGES="Extension manager - Packages"
 
 ; Toolbar
 COM_INSTALLER_TOOLBAR_DISCOVER="Discover"
