Adding repository management

--- a/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
+++ b/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
@@ -155,6 +155,7 @@ COM_INSTALLER_TITLE_UPDATE="Extension manager - Update"
 COM_INSTALLER_TITLE_WARNINGS="Extension manager - Warnings"
 COM_INSTALLER_TITLE_MIGRATIONS="Extension manager - Migrations"
 COM_INSTALLER_TITLE_PACKAGES="Extension manager - Packages"
+COM_INSTALLER_TITLE_REPOSITORIES="Extension manager - Repositories"
 
 ; Toolbar
 COM_INSTALLER_TOOLBAR_DISCOVER="Discover"
@@ -207,3 +208,22 @@ COM_INSTALLER_HEADER_LANGUAGES="Install Accredited Language Translations"
 COM_INSTALLER_HEADING_DETAILS_URL="Details URL"
 COM_INSTALLER_MSG_LANGUAGES_NOLANGUAGES="There are no available languages to install at the moment. Please click on the &quot;Purge Cache&quot; and &quot;Find languages&quot; buttons to check for updates on the HUBzero Languages server. You will need an internet connection for this to work."
 COM_INSTALLER_LANGUAGES_FILTER_SEARCH_DESC="Search by language name."
+
+; Packages
+COM_INSTALLER_PACKAGES_INSTALLED_VERSION="Installed Version"
+COM_INSTALLER_PACKAGES_RELEASE_DATE="Release Date"
+COM_INSTALLER_PACKAGES_TYPE="Type"
+COM_INSTALLER_PACKAGES_AUTHORS="Authors"
+COM_INSTALLER_PACKAGES_BASIC_INFO="Basic Information"
+COM_INSTALLER_PACKAGES_PACKAGE="Package"
+COM_INSTALLER_PACKAGES_PACKAGES="Packages"
+COM_INSTALLER_PACKAGES_AVAILABLE_VERSIONS="Available Versions"
+COM_INSTALLER_PACKAGES_INSTALL_VERSION="Install Version"
+COM_INSTALLER_PACKAGES_REPOSITORIES="Repositories"
+COM_INSTALLER_PACKAGES_REPOSITORY="Repository"
+COM_INSTALLER_PACKAGES_REPOSITORY_NAME="Repository Name"
+COM_INSTALLER_PACKAGES_REPOSITORY_ALIAS="Alias"
+COM_INSTALLER_PACKAGES_REPOSITORY_DESCRIPTION="Description"
+COM_INSTALLER_PACKAGES_REPOSITORY_URL="URL"
+COM_INSTALLER_PACKAGES_REPOSITORY_TYPE="Type"
+COM_INSTALLER_PACKAGES_REPOSITORY_UPDATE="Update Repository"
