Change Collection activity digest message to include group name/ post name so that it is more obviously where the Collection activity occurred.
fixes: https://qubeshub.org/support/ticket/971

--- a/core/plugins/groups/collections/language/en-GB/en-GB.plg_groups_collections.ini
+++ b/core/plugins/groups/collections/language/en-GB/en-GB.plg_groups_collections.ini
@@ -151,8 +151,8 @@ PLG_GROUPS_COLLECTIONS_NO_POSTS_FOUND="No posts available."
 PLG_GROUPS_COLLECTIONS_ACTIVITY_COLLECTION_CREATED="Collection &quot;%s&quot; created"
 PLG_GROUPS_COLLECTIONS_ACTIVITY_COLLECTION_UPDATED="Collection &quot;%s&quot; updated"
 PLG_GROUPS_COLLECTIONS_ACTIVITY_COLLECTION_DELETED="Collection &quot;%s&quot; deleted"
-PLG_GROUPS_COLLECTIONS_ACTIVITY_POST_CREATED="Post added to collection &quot;%s&quot;"
-PLG_GROUPS_COLLECTIONS_ACTIVITY_POST_UPDATED="Post updated in collection &quot;%s&quot;"
+PLG_GROUPS_COLLECTIONS_ACTIVITY_POST_CREATED="Post &quot;%s&quot; added to collection &quot;%s&quot; from group &quot;%s&quot;"
+PLG_GROUPS_COLLECTIONS_ACTIVITY_POST_UPDATED="Post &quot;%s&quot; updated in collection &quot;%s&quot; from group &quot;%s&quot;"
 PLG_GROUPS_COLLECTIONS_ACTIVITY_POST_DELETED="Post removed from collection &quot;%s&quot;"
 PLG_GROUPS_COLLECTIONS_ACTIVITY_ITEM_CREATED="Collection &quot;%s&quot; created"
 PLG_GROUPS_COLLECTIONS_ACTIVITY_ITEM_UPDATED="Collection &quot;%s&quot; updated"
