--- a/core/plugins/members/messages/language/en-GB/en-GB.plg_members_messages.ini
+++ b/core/plugins/members/messages/language/en-GB/en-GB.plg_members_messages.ini
@@ -48,7 +48,7 @@ PLG_MEMBERS_MESSAGES_MSG_IM="IM"
 PLG_MEMBERS_MESSAGES_MSG_SMSTXT="SMS"
 PLG_MEMBERS_MESSAGES_MSG_RSS="RSS"
 PLG_MEMBERS_MESSAGES_MSG_WITH_SELECTED="With selected ..."
-PLG_MEMBERS_MESSAGES_MSG_MARK_AS_READ="Mark as read"
+PLG_MEMBERS_MESSAGES_MSG_MARK_AS_READ="Mark as Read"
 PLG_MEMBERS_MESSAGES_MSG_MARK_AS_UNREAD="Mark as Unread"
 PLG_MEMBERS_MESSAGES_MSG_SEND_TO_ARCHIVE="Send to Archive"
 PLG_MEMBERS_MESSAGES_MSG_SEND_TO_TRASH="Send to Trash"
