--- a/core/components/com_cart/admin/language/en-GB/en-GB.com_cart.ini
+++ b/core/components/com_cart/admin/language/en-GB/en-GB.com_cart.ini
@@ -13,8 +13,12 @@ COM_CART="Shopping Cart"
 COM_CART_SOFTWARE_DOWNLOADS="Software Downloads"
 COM_CART_ORDERS="Orders"
 COM_CART_ORDER_ID="Order ID"
-COM_CART_ORDER_PALCED="Order placed"
+COM_CART_ORDER_TOTAL="Order total"
+COM_CART_ORDER_PLACED="Order placed"
+COM_CART_ORDER_NUM_ITEMS="Items ordered"
 COM_CART_ORDERED_BY="Purchased by"
+COM_CART_PRICE="Price"
+COM_CART_QUANTITY="QTY"
 COM_CART_SKU_ID="SKU ID"
 COM_CART_SKU="SKU"
 COM_CART_PRODUCT="Product"
@@ -34,7 +38,11 @@ COM_CART_DOWNLOADS_REPORT_ALL="All downloads"
 COM_CART_DOWNLOADS_REPORT_SKU="Downloads by SKU"
 COM_CART_OREDERS_REPORT_ALL="All orders"
 COM_CART_ORDER_ITEMS_REPORT="Items ordered"
+COM_CART_UNKNOWN="(unknown)"
+COM_CART_ORDERS_FOR="Orders for"
+COM_CART_USER_ID="User ID"
 
+; Notes
 COM_CART_SHOW_NOTES="Order notes"
 COM_CART_SHOW_NOTES_ALL="All notes"
 COM_CART_SHOW_NOTES_ONLY="Only nonempty notes"
