Adding option to hide menu item for plugin This allows for a plugin to still render and be usable if directed to the proper URL but does not display a standard Member menu link.
Refs: https://purr.purdue.edu/support/ticket/1523

--- a/core/plugins/members/account/language/en-GB/en-GB.plg_members_account.ini
+++ b/core/plugins/members/account/language/en-GB/en-GB.plg_members_account.ini
@@ -7,6 +7,7 @@
 
 ; General
 PLG_MEMBERS_ACCOUNT="Account"
+PLG_MEMBERS_ACCOUNT_XML_DESC="Display a member's account information"
 PLG_MEMBERS_SET_LOCAL_PASSWORD="Set local password"
 PLG_MEMBERS_CHANGE_LOCAL_PASSWORD="Change local password"
 PLG_MEMBERS_CHANGE_HUB_PASSWORD="Change password"
@@ -60,3 +61,9 @@ PLG_MEMBERS_ACCOUNT_KEY_UPLOAD_CREATE_FOLDER_FAILED="Create folder failed"
 PLG_MEMBERS_ACCOUNT_KEY_UPLOAD_WRITE_FAILED="Write failed"
 PLG_MEMBERS_ACCOUNT_KEY_UPLOAD_SUCCESSFUL="Key upload successful"
 PLG_MEMBERS_ACCOUNT_KEY_ERROR_ACCESSING_HOME_DIR="There was an error accessing your SSH public key"
+
+; Params
+PLG_MEMBERS_ACCOUNT_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_ACCOUNT_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
+PLG_MEMBERS_ACCOUNT_PARAM_SSH_KEY_UPLOAD_LABEL="Show local services details"
+PLG_MEMBERS_ACCOUNT_PARAM_SSH_KEY_UPLOAD_DESC="Enabling this options allows users to upload their public ssh key via the members account plugin, and shows them their local services account details."
