--- a/core/plugins/members/activity/language/en-GB/en-GB.plg_members_activity.ini
+++ b/core/plugins/members/activity/language/en-GB/en-GB.plg_members_activity.ini
@@ -65,5 +65,7 @@ PLG_MEMBERS_ACTIVITY_SETTINGS_FREQUENCY_WEEKLY="Weekly - Send me a weekly email 
 PLG_MEMBERS_ACTIVITY_SETTINGS_FREQUENCY_MONTHLY="Monthly - Send me a monthly email showing the latest activity."
 
 ; Params
+PLG_MEMBERS_ACTIVITY_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_ACTIVITY_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
 PLG_MEMBERS_ACTIVITY_PARAM_EMAILDIGESTS_LABEL="Enable Email Digests"
 PLG_MEMBERS_ACTIVITY_PARAM_EMAILDIGESTS_DESC="Allow users to receieve email digests of activity. NOTE: This may require the activation of other plugins to process the emails."
