--- a/core/plugins/members/blog/language/en-GB/en-GB.plg_members_blog.ini
+++ b/core/plugins/members/blog/language/en-GB/en-GB.plg_members_blog.ini
@@ -72,6 +72,8 @@ PLG_MEMBERS_BLOG_PARAM_FEEDENTRIES_LABEL="Feed Entries"
 PLG_MEMBERS_BLOG_PARAM_FEEDENTRIES_DESC="The length of RSS feed entries"
 PLG_MEMBERS_BLOG_PARAM_FEEDENTRIES_FULL="Full"
 PLG_MEMBERS_BLOG_PARAM_FEEDENTRIES_PARTIAL="Partial"
+PLG_MEMBERS_BLOG_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_BLOG_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
 
 ; Comments
 PLG_MEMBERS_BLOG_ON="on"
