--- a/core/plugins/members/citations/language/en-GB/en-GB.plg_members_citations.ini
+++ b/core/plugins/members/citations/language/en-GB/en-GB.plg_members_citations.ini
@@ -347,3 +347,7 @@ PLG_MEMBERS_CITATIONS_IMPORT_IMPORT_MORE="Import More Citations"
 PLG_MEMBERS_CITATIONS_IMPORT_BROWSE_ALL="Browse all Citations"
 COM_CITATIONS_ENDNOTE="EndNote"
 COM_CITATIONS_BIBTEX="BibTex"
+
+; Params
+PLG_MEMBERS_CITATIONS_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_CITATIONS_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
