--- a/core/plugins/members/collections/language/en-GB/en-GB.plg_members_collections.ini
+++ b/core/plugins/members/collections/language/en-GB/en-GB.plg_members_collections.ini
@@ -192,6 +192,8 @@ PLG_MEMBERS_COLLECTIONS_PARAM_DEFAULTVIEW_LABEL="Default View"
 PLG_MEMBERS_COLLECTIONS_PARAM_DEFAULTVIEW_DESC="Default view for the tab."
 PLG_MEMBERS_COLLECTIONS_PARAM_DEFAULTVIEW_FEED="Activity feed"
 PLG_MEMBERS_COLLECTIONS_PARAM_DEFAULTVIEW_COLLECTIONS="User's Collections"
+PLG_MEMBERS_COLLECTIONS_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_COLLECTIONS_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
 
 ; Activity
 PLG_MEMBERS_COLLECTIONS_ACTIVITY_COLLECTION_CREATED="Collection &quot;%s&quot; created"
