--- a/core/plugins/members/courses/language/en-GB/en-GB.plg_members_courses.ini
+++ b/core/plugins/members/courses/language/en-GB/en-GB.plg_members_courses.ini
@@ -65,3 +65,7 @@ PLG_MEMBERS_COURSES_ACTION_ACCEPT="[accept]"
 PLG_MEMBERS_COURSES_NA="n/a"
 PLG_MEMBERS_COURSES_ON="on"
 PLG_MEMBERS_COURSES_AT="@"
+
+; Params
+PLG_MEMBERS_COURSES_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_COURSES_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
