--- a/core/plugins/members/dashboard/language/en-GB/en-GB.plg_members_dashboard.ini
+++ b/core/plugins/members/dashboard/language/en-GB/en-GB.plg_members_dashboard.ini
@@ -52,3 +52,5 @@ PLG_MEMBERS_DASHBOARD_PARAM_POSITION_LABEL="Module position"
 PLG_MEMBERS_DASHBOARD_PARAM_POSITION_DESC="The module position to use to gather draggable modules"
 PLG_MEMBERS_DASHBOARD_PARAM_DEFAULTS_LABEL="Defaults"
 PLG_MEMBERS_DASHBOARD_PARAM_DEFAULTS_DESC="The default list of modules to show"
+PLG_MEMBERS_DASHBOARD_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_DASHBOARD_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
