--- a/core/plugins/members/groups/language/en-GB/en-GB.plg_members_groups.ini
+++ b/core/plugins/members/groups/language/en-GB/en-GB.plg_members_groups.ini
@@ -70,3 +70,7 @@ PLG_MEMBERS_GROUPS_ACTION_DECLINE_TITLE="Membership Options :: Decline membershi
 
 PLG_MEMBERS_GROUPS_NEW_INVITATIONS="%s new group invitation(s)"
 PLG_MEMBERS_GROUPS_ALERT="Groups Alert"
+
+; Params
+PLG_MEMBERS_GROUPS_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_GROUPS_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
