--- a/core/plugins/members/impact/language/en-GB/en-GB.plg_members_impact.ini
+++ b/core/plugins/members/impact/language/en-GB/en-GB.plg_members_impact.ini
@@ -63,3 +63,5 @@ PLG_MEMBERS_IMPACT_PARAM_SHOWIMPACT_PUBLIC="Yes, show publicly"
 PLG_MEMBERS_IMPACT_PARAM_SHOWIMPACT_AUTHORONLY="Yes, show to author only"
 PLG_MEMBERS_IMPACT_PARAM_CONTRIBUTIONS_LABEL="Include Contributions"
 PLG_MEMBERS_IMPACT_PARAM_CONTRIBUTIONS_DESC="List publications by user"
+PLG_MEMBERS_IMPACT_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_IMPACT_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
