--- a/core/plugins/members/messages/language/en-GB/en-GB.plg_members_messages.ini
+++ b/core/plugins/members/messages/language/en-GB/en-GB.plg_members_messages.ini
@@ -57,3 +57,6 @@ PLG_MEMBERS_MESSAGES_MSG_APPLY="Apply"
 PLG_MEMBERS_MESSAGES_MSG_DELETE="Delete"
 PLG_MEMBERS_MESSAGES_DELETE_TITLE="Send to Trash :: Move this message to your trash bin?"
 PLG_MEMBERS_MESSAGES_NO_COMPONENTS_FOUND="No components configured for XMessages."
+
+PLG_MEMBERS_MESSAGES_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_MESSAGES_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
