--- a/core/plugins/members/projects/language/en-GB/en-GB.plg_members_projects.ini
+++ b/core/plugins/members/projects/language/en-GB/en-GB.plg_members_projects.ini
@@ -82,3 +82,5 @@ PLG_MEMBERS_PROJECTS_PARAM_SHOW_DESC="What projects can other site members see?"
 PLG_MEMBERS_PROJECTS_PARAM_SHOW_NONE="No projects (show to only the profile owner)"
 PLG_MEMBERS_PROJECTS_PARAM_SHOW_PUBLIC="Public projects"
 PLG_MEMBERS_PROJECTS_PARAM_SHOW_ALL="Public and private projects"
+PLG_MEMBERS_PROJECTS_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_PROJECTS_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
