--- a/core/plugins/members/resume/language/en-GB/en-GB.plg_members_resume.ini
+++ b/core/plugins/members/resume/language/en-GB/en-GB.plg_members_resume.ini
@@ -61,3 +61,7 @@ PLG_MEMBERS_RESUME_VIEW_JOBS_IN="View Jobs in %s"
 PLG_MEMBERS_RESUME_TYPE_ANY="Any"
 PLG_MEMBERS_RESUME_CATEGORY_ANY="Any"
 PLG_MEMBERS_RESUME_CANCEL="Cancel"
+
+; Params
+PLG_MEMBERS_RESUME_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_RESUME_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
