--- a/core/plugins/members/todo/language/en-GB/en-GB.plg_members_todo.ini
+++ b/core/plugins/members/todo/language/en-GB/en-GB.plg_members_todo.ini
@@ -22,3 +22,6 @@ PLG_MEMBERS_TODO_ERROR_ACCESS_PROJECT="Error accessing project inofrmation."
 
 PLG_MEMBERS_TODO_SAVED="New to do item posted"
 PLG_MEMBERS_TODO_ACTIVITY_TODO_ADDED="posted a to do item"
+
+PLG_MEMBERS_TODO_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_TODO_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
