--- a/core/plugins/members/account/language/en-GB/en-GB.plg_members_account.sys.ini
+++ b/core/plugins/members/account/language/en-GB/en-GB.plg_members_account.sys.ini
@@ -1,8 +1,9 @@
 ; @package      hubzero-cms
-; @file         administrator/language/en-GB/en-GB.plg_members_account.sys.ini
+; @file         language/en-GB/en-GB.plg_members_account.sys.ini
 ; @copyright    Copyright 2005-2015 HUBzero Foundation, LLC.
 ; @license      http://opensource.org/licenses/MIT MIT
 
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 PLG_MEMBERS_ACCOUNT="Members - Account"
+PLG_MEMBERS_ACCOUNT_XML_DESC="Display a member's account information"
