--- a/core/plugins/members/contributions/language/en-GB/en-GB.plg_members_contributions.ini
+++ b/core/plugins/members/contributions/language/en-GB/en-GB.plg_members_contributions.ini
@@ -31,3 +31,5 @@ PLG_MEMBERS_CONTRIBUTIONS_SORT_POPULARITY="Popular"
 ; Params
 PLG_MEMBERS_CONTRIBUTIONS_PARAM_LIMIT_LABEL="Display Limit"
 PLG_MEMBERS_CONTRIBUTIONS_PARAM_LIMIT_DESC="Number of items to return"
+PLG_MEMBERS_CONTRIBUTIONS_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_CONTRIBUTIONS_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
