--- a/core/plugins/members/points/language/en-GB/en-GB.plg_members_points.ini
+++ b/core/plugins/members/points/language/en-GB/en-GB.plg_members_points.ini
@@ -28,3 +28,5 @@ PLG_MEMBERS_POINTS_AVAILABLE="available to spend"
 ; Params
 PLG_MEMBERS_POINTS_PARAM_LIMIT_LABEL="Display Limit"
 PLG_MEMBERS_POINTS_PARAM_LIMIT_DESC="Number of items to return"
+PLG_MEMBERS_POINTS_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_POINTS_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
