--- a/core/plugins/members/profile/language/en-GB/en-GB.plg_members_profile.ini
+++ b/core/plugins/members/profile/language/en-GB/en-GB.plg_members_profile.ini
@@ -27,6 +27,8 @@ PLG_MEMBERS_PROFILE_SAVE="Save"
 PLG_MEMBERS_PROFILE_CANCEL="Cancel"
 PLG_MEMBERS_PROFILE_READONLY="The &quot;%s&quot; profile field has been marked as <strong>read-only</strong> by a HUB administrator."
 PLG_MEMBERS_PROFILE_ACCESS_MUST_BE_PUBLIC="Account must be public to set access on individual profile fields."
+PLG_MEMBERS_PROFILE_PARAM_DISPLAY_TAB_LABEL="Show in menu"
+PLG_MEMBERS_PROFILE_PARAM_DISPLAY_TAB_DESC="Show a link to this plugin in the Member menu?"
 
 ; Incremental
 PLG_MEMBERS_PROFILE_INCREMENTAL_OFFERING_POINTS="It is important to us to know about the community we serve. To that end, we are offering <strong>points</strong> (our virtual currency, see <a href="_QQ_"%s"_QQ_">the store</a>) for filling out your profile."
