Make sure module has same links as component Make sure links ont he login module are the same as the main login page and functionality is the same.

--- a/core/modules/mod_login/language/en-GB/en-GB.mod_login.ini
+++ b/core/modules/mod_login/language/en-GB/en-GB.mod_login.ini
@@ -26,3 +26,19 @@ MOD_LOGIN_REMEMBER_ME="Remember Me"
 MOD_LOGIN_VALUE_NAME="Name"
 MOD_LOGIN_VALUE_USERNAME="User Name"
 MOD_LOGIN_XML_DESCRIPTION="This module displays a username and password login form. It also displays a link to retrieve a forgotten password. If user registration is enabled (in User Manager > Options), another link will be shown to enable self-registration for users."
+
+MOD_LOGIN_TO="Sign in to %s"
+MOD_LOGIN_CHOOSE_METHOD="Choose your sign in method:"
+MOD_LOGIN_SIGN_IN_WITH_METHOD="Sign in with %s"
+MOD_LOGIN_SIGN_IN_WITH_ACCOUNT="Sign in with your %s account"
+MOD_LOGIN_SIGN_IN_WITH_DIFFERENT_ACCOUNT="Sign in with a different account"
+MOD_LOGIN_USER_PICTURE="User profile picture"
+MOD_LOGIN_CREATE_ACCOUNT="Create an account"
+MOD_LOGIN_KEEP_LOGGED_IN="Keep me logged in?"
+MOD_LOGIN_PASSWORD="Password"
+MOD_LOGIN_USERNAME="Email address or username"
+MOD_LOGIN_UNAVAILABLE="Login is currently unavailable."
+MOD_LOGIN_REGISTER="Don't have an account?"
+MOD_LOGIN_REMIND="Lost username?"
+MOD_LOGIN_RESET="Forgot password?"
+MOD_LOGIN_USERNAME_LABEL="User Name"
