Move composer functionality to muse commands
Moves composer functionality to muse commands so they can be called
via the shell

--- a/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
+++ b/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
@@ -218,6 +218,7 @@ COM_INSTALLER_PACKAGES_BASIC_INFO="Basic Information"
 COM_INSTALLER_PACKAGES_PACKAGE="Package"
 COM_INSTALLER_PACKAGES_PACKAGES="Packages"
 COM_INSTALLER_PACKAGES_AVAILABLE_VERSIONS="Available Versions"
+COM_INSTALLER_PACKAGES_AVAILABLE_PACKAGES="Available Packages"
 COM_INSTALLER_PACKAGES_INSTALL_VERSION="Install Version"
 COM_INSTALLER_PACKAGES_REPOSITORIES="Repositories"
 COM_INSTALLER_PACKAGES_REPOSITORY="Repository"
@@ -227,3 +228,6 @@ COM_INSTALLER_PACKAGES_REPOSITORY_DESCRIPTION="Description"
 COM_INSTALLER_PACKAGES_REPOSITORY_URL="URL"
 COM_INSTALLER_PACKAGES_REPOSITORY_TYPE="Type"
 COM_INSTALLER_PACKAGES_REPOSITORY_UPDATE="Update Repository"
+
+COM_INSTALLER_MUSE_USER_LABEL="Muse username"
+COM_INSTALLER_MUSE_USER_DESC="The system user that the 'muse' command should be run as"
