[COM_STOREFRONT] Add custom optional quantity label to products

--- a/core/components/com_storefront/admin/language/en-GB/en-GB.com_storefront.ini
+++ b/core/components/com_storefront/admin/language/en-GB/en-GB.com_storefront.ini
@@ -58,6 +58,7 @@ COM_STOREFRONT_UNPUBLISH="Unpublish"
 COM_STOREFRONT_UNPUBLISHED="Unpublished"
 COM_STOREFRONT_TYPE="Type"
 COM_STOREFRONT_ALLOW_MULTIPLE="Allow multiple"
+COM_STOREFRONT_QTY_TXT="Quantity text"
 COM_STOREFRONT_ACCESS="Access"
 COM_STOREFRONT_ACCESS_LEVEL="Access level"
 COM_STOREFRONT_SUB_CATEGORIES="Sub categories"
