--- a/core/plugins/user/constantcontact/language/en-GB/en-GB.plg_user_constantcontact.sys.ini
+++ b/core/plugins/user/constantcontact/language/en-GB/en-GB.plg_user_constantcontact.sys.ini
@@ -1,8 +1,9 @@
 ; @package      hubzero-cms
-; @file         administrator/language/en-GB/en-GB.plg_user_constantcontact.sys.ini
+; @file         language/en-GB/en-GB.plg_user_constantcontact.sys.ini
 ; @copyright    Copyright 2005-2015 HUBzero Foundation, LLC.
 ; @license      http://opensource.org/licenses/MIT MIT
 
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 PLG_USER_CONSTANTCONTACT="User - Constantcontact"
+PLG_USER_CONSTANTCONTACT_XML_DESCRIPTION="Syncs Members to 3rd-party service Constant Contact"
