[feat] Adding state filters for admin interface
Refs: https://nanohub.org/support/ticket/325424

--- a/core/components/com_tools/admin/language/en-GB/en-GB.com_tools.ini
+++ b/core/components/com_tools/admin/language/en-GB/en-GB.com_tools.ini
@@ -161,6 +161,7 @@ COM_TOOLS_LOCATIONS_ADDED_LATER="entry must be saved before locations can be add
 COM_TOOLS_WILL_REPLACE_EXISTING_IMAGE="Uploaded file will rpelace any existing file."
 
 ; States
+COM_TOOLS_ALL_STATES="- All States -"
 COM_TOOLS_PUBLISHED="Published"
 COM_TOOLS_UNPUBLISHED="Unpublished"
 COM_TOOLS_CREATED="Created"
