[COM_CART] Add download history for Product or SKU

--- a/core/components/com_cart/admin/language/en-GB/en-GB.com_cart.ini
+++ b/core/components/com_cart/admin/language/en-GB/en-GB.com_cart.ini
@@ -40,6 +40,7 @@ COM_CART_OREDERS_REPORT_ALL="All orders"
 COM_CART_ORDER_ITEMS_REPORT="Items ordered"
 COM_CART_UNKNOWN="(unknown)"
 COM_CART_ORDERS_FOR="Orders for"
+COM_CART_ORDERS_OF="Orders of"
 COM_CART_USER_ID="User ID"
 
 ; Notes
