--- a/core/plugins/members/blog/language/en-GB/en-GB.plg_members_blog.ini
+++ b/core/plugins/members/blog/language/en-GB/en-GB.plg_members_blog.ini
@@ -56,6 +56,7 @@ PLG_MEMBERS_BLOG_SEARCH_FOR="Search for &quot;%s&quot;"
 PLG_MEMBERS_BLOG_ENTRY_NUMBER="Entry #%s"
 PLG_MEMBERS_BLOG_EDITED="Edited"
 PLG_MEMBERS_BLOG_CONFIRM_DELETE="Are you sure you wish to delete this item?"
+PLG_MEMBERS_BLOG_NOT_AUTHORIZED="You do not have permission to perform that action."
 
 ; Params
 PLG_MEMBERS_BLOG_PARAM_UPLOADPATH_LABEL="Upload path"
