(fix) Route to Versions tab and show Master DOI
Fixes: https://qubeshub.org/support/ticket/967

--- a/core/plugins/publications/versions/language/en-GB/en-GB.plg_publications_versions.ini
+++ b/core/plugins/publications/versions/language/en-GB/en-GB.plg_publications_versions.ini
@@ -24,4 +24,5 @@ PLG_PUBLICATION_VERSIONS_STATUS="Status"
 PLG_PUBLICATION_VERSIONS_ONLY_PUBLIC_SHOWN="The table below shows only publicly accessible versions of the publication."
 PLG_PUBLICATION_VERSIONS_VIEW="view version &raquo;"
 PLG_PUBLICATION_VERSIONS_VIEW_ALL="View and manage all versions"
+COM_PUBLICATION_VERSIONS_MASTER="Master"
 COM_PUBLICATIONS_NA="N/A"
