[feat] Refactor Extension Management
Changes the way the Extension Management section of the admin site looks
and removes a number of broken or half working sections.

[COM_INSTALLER]

--- a/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
+++ b/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
@@ -200,7 +200,7 @@ COM_INSTALLER_PREFERENCES_LABEL="Preferences"
 COM_INSTALLER_PREFERENCES_DESCRIPTION="Fine-tune how extensions installation and updates work"
 COM_INSTALLER_CACHETIMEOUT_LABEL="Updates caching (in hours)"
 COM_INSTALLER_CACHETIMEOUT_DESC="For how many hours should the CMS cache extension update information"
-COM_INSTALLER_SUBMENU_LANGUAGES="Install languages"
+COM_INSTALLER_SUBMENU_LANGUAGES="Languages"
 COM_INSTALLER_TOOLBAR_INSTALL="Install"
 COM_INSTALLER_TOOLBAR_FIND_LANGUAGES="Find languages"
 COM_INSTALLER_LANGUAGES_AVAILABLE_LANGUAGES="Available Languages"
