[Feature] Allow site users to request access to public projects 	A public project can toggle on the ability to allow users to request access. 	The request can be approved/denied by managers on the team page.

--- a/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
@@ -114,6 +114,8 @@ COM_PROJECTS_PRIVATE="private"
 COM_PROJECTS_PUBLIC="public"
 COM_PROJECTS_YOUR_PROJECT_IS="Your project is"
 COM_PROJECTS_CHANGE_THIS="change this"
+COM_PROJECTS_REQUEST_MEMBERSHIP="Request Access"
+COM_PROJECTS_MEMBERSHIPREQUEST="Allow users to request access to the project."
 COM_PROJECTS_TEAM_PUBLIC="Show <strong>team</strong> on public project page"
 COM_PROJECTS_PUBLICATIONS_PUBLIC="Show <strong>publications</strong> on public project page"
 COM_PROJECTS_NOTES_PUBLIC="Show <strong>public notes</strong> on public project page"
@@ -590,6 +592,10 @@ COM_PROJECTS_EMAIL_ADMIN_REVIEWER_NOTIFICATION="Project reviewer notification"
 COM_PROJECTS_EMAIL_ADMIN_NEW_PUB_STATUS="Project administrator publication status update"
 COM_PROJECTS_EMAIL_MANAGERS_NEW_PUB_STATUS="Project manager publication status update"
 COM_PROJECTS_EMAIL_MANAGERS_NEW_PUB_STARTED="New publication started via a project you manage"
+COM_PROJECTS_EMAIL_MEMBERSHIPREQUEST_ACCEPTED="Your membership requested has been accepted."
+COM_PROJECTS_EMAIL_MEMBERSHIPREQUEST_DENIED="Your membership requested has been denied."
+COM_PROJECTS_EMAIL_MEMBERSHIPREQUEST_SUBJECT="Project membership requested."
+COM_PROJECTS_EMAIL_MEMBERSHIPREQUEST_MESSAGE="%s &lt;%s&gt; has requested access to this project."
 
 ; Errors
 ALERTNOTAUTH="You are not authorized to view this page or proceed with an action."
