--- a/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
+++ b/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
@@ -187,3 +187,15 @@ PLG_PROJECTS_TEAM_PUB_AUTHOR_ACCESS_TIPS="Select access level for each collabora
 PLG_PROJECTS_TEAM_SAVE_MY_CHANGES="Save my changes"
 PLG_PROJECTS_TEAM_PUB_AUTHORS_CHANGED="Changes successfully saved."
 
+PLG_PROJECTS_TEAM_DENY_MEMBERREQUEST_TITLE="Deny Membership Request"
+PLG_PROJECTS_TEAM_DENY_MEMBERREQUEST_NOTE="NOTE: Denied users will no longer be able to submit a member request for this project"
+PLG_PROJECTS_TEAM_DENY_MEMBERREQUEST_PROMPT="Deny membership request for the user below?"
+PLG_PROJECTS_TEAM_DENY_MEMBERREQUEST="Deny Request"
+
+PLG_PROJECTS_TEAM_NOT_PERMITTED="You do not have permission to perform that action."
+
+PLG_PROJECTS_TEAM_DENY_REQUEST="Deny"
+PLG_PROJECTS_TEAM_APPROVE_REQUEST="Approve"
+PLG_PROJECTS_TEAM_REQUESTED="Membership Requested"
+PLG_PROJECTS_TEAM_MEMBERSHIP_APPROVED="Membership request approved."
+
