Adds sorting for licenses

--- a/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
+++ b/core/components/com_resources/admin/language/en-GB/en-GB.com_resources.ini
@@ -20,6 +20,7 @@ COM_RESOURCES_FILTER_STATUS="Status"
 COM_RESOURCES_FILTER_STATUS_ALL="- Select Status -"
 COM_RESOURCES_FILTER_TYPE="Type"
 COM_RESOURCES_FILTER_TYPE_ALL="- Select Type -"
+COM_RESOURCES_FILTER_LICENSE_ALL="- Select License -"
 COM_RESOURCES_GO="Go"
 COM_RESOURCES_ON="on"
 COM_RESOURCES_NONE="(none)"
