--- a/components/com_partners/admin/language/en-GB/en-GB.com_partners.ini
+++ b/components/com_partners/admin/language/en-GB/en-GB.com_partners.ini
@@ -14,6 +14,7 @@ COM_PARTNERS_ALL_STATES="- All States -"
 COM_PARTNERS_COL_ID="ID"
 COM_PARTNERS_COL_ABOUT="About"
 COM_PARTNERS_COL_STATE="State"
+COM_PARTNERS_COL_FEATURED="Featured"
 COM_PARTNERS_COL_DATE_JOINED="Date Joined"
 COM_PARTNERS_COL_GROUP_CN="Group CN"
 COM_PARTNERS_COL_LOGO_URL="Logo(URL)"
@@ -42,12 +43,11 @@ COM_PARTNERS_HINT_QUBES_LIASON = "Liason for QUBES"
 COM_PARTNERS_HINT_PARTNER_LIASON = "Liason for the partner"
 COM_PARTNERS_HINT_ACTIVITIES = "List activities here"
 
-
-
 ; Entry Fields
 COM_PARTNERS_FIELD_NAME="Name"
 COM_PARTNERS_FIELD_DATE_JOINED="Date Joined"
 COM_PARTNERS_FIELD_STATE="State"
+COM_PARTNERS_FIELD_FEATURED="Featured"
 COM_PARTNERS_FIELD_ABOUT="About"
 COM_PARTNERS_FIELD_PARTNER_TYPE="Partner Type"
 COM_PARTNERS_FIELD_ID="ID"
@@ -74,10 +74,16 @@ COM_PARTNERS_SELECT_ENTRY_TO="Please select one or more items to %s"
 COM_PARTNERS_ITEMS_PUBLISHED="%s item(s) published."
 COM_PARTNERS_ITEMS_UNPUBLISHED="%s item(s) unpublished."
 COM_PARTNERS_ITEMS_ARCHIVED="%s item(s) archived."
+COM_PARTNERS_ITEMS_FEATURED="%s item(s) featured."
+COM_PARTNERS_ITEMS_UNFEATURED="%s item(s) unfeatured."
 
 ; Config
 COM_PARTNERS_CONFIG_SHOWSTUFF_LABEL="Show stuff"
 COM_PARTNERS_CONFIG_SHOWSTUFF_DESC="Show stuff?"
+
+; Toolbar
+JACTION_EDITFEATURED="Edit Featured"
+JACTION_EDITFEATURED_COMPONENT_DESC="Allows users to change the state of any content in this extension."
 
 ;image upload
 COM_PARTNERS_MEDIA_UPLOAD = "Upload";
