[Fix] Project membership request wasn't using user's Id 	*Forgot to remove a hard coded value I included for testing 	Use actual logged in user Id instead

--- a/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
@@ -114,8 +114,6 @@ COM_PROJECTS_PRIVATE="private"
 COM_PROJECTS_PUBLIC="public"
 COM_PROJECTS_YOUR_PROJECT_IS="Your project is"
 COM_PROJECTS_CHANGE_THIS="change this"
-COM_PROJECTS_REQUEST_MEMBERSHIP="Request Access"
-COM_PROJECTS_MEMBERSHIPREQUEST="Allow users to request access to the project."
 COM_PROJECTS_TEAM_PUBLIC="Show <strong>team</strong> on public project page"
 COM_PROJECTS_PUBLICATIONS_PUBLIC="Show <strong>publications</strong> on public project page"
 COM_PROJECTS_NOTES_PUBLIC="Show <strong>public notes</strong> on public project page"
@@ -752,3 +750,7 @@ COM_PROJECTS_FILES_ERROR_INSERT_ITEM_EXISTS="Insert failed: item already exists"
 COM_PROJECTS_FILES_ERROR_INSERT_ITEM_NOT_EXISTS="Failed to update item: item does not exist"
 COM_PROJECTS_FILES_ERROR_CONNECT_PERMISSION="Sorry, we cannot connect you to external file service without your permission"
 COM_PROJECTS_FILES_ERROR_CONNECT_NOW="Sorry, we cannot connect you to external file service at this time"
+
+COM_PROJECTS_REQUEST_MEMBERSHIP="Request Access"
+COM_PROJECTS_MEMBERSHIPREQUEST="Allow users to request access to the project."
+COM_PROJECTS_MEMBERSHIPREQUEST_SUCCESS="Membership to this project has been requested."
