[fix] Adding missing language string
Fixes: https://help.hubzero.org/support/ticket/11188

--- a/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
+++ b/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
@@ -160,6 +160,7 @@ COM_NEWSLETTER_UNKNOWN="(unknown)"
 WEEKLY="Weekly"
 DAILY="Daily"
 MONTHLY="Monthly"
+COM_NEWSLETTER_ERROR_MISSING_NAME="Please provide a name."
 
 
 ; Stories
