--- a/app/components/com_partners/site/language/en-GB/en-GB.com_partners.ini
+++ b/app/components/com_partners/site/language/en-GB/en-GB.com_partners.ini
@@ -18,6 +18,11 @@ COM_PARTNERS_BACK = "Back"
 COM_PARTNERS_MAIN = "Main Page"
 COM_PARTNERS_PARTNER_TYPES_ALL = "- All Partner Types -"
 
+; Partner Categories
+COM_PARTNERS_SPONSORED = "Sponsors"
+COM_PARTNERS_FEATURED = "Featured Partners"
+COM_PARTNERS_OTHER = "Partners"
+
 ; Messages
 COM_PARTNERS_PARTNER_NOT_FOUND="Character not found"
 
