[fix] Removing text referencing deprecated feature
Fixes: https://help.hubzero.org/support/ticket/11238

--- a/core/components/com_tools/site/language/en-GB/en-GB.com_tools.ini
+++ b/core/components/com_tools/site/language/en-GB/en-GB.com_tools.ini
@@ -78,7 +78,7 @@ COM_TOOLS_SHARE_SESSION_WITH_GROUP="Share with one of your Groups:"
 COM_TOOLS_SHARE_SESSION_READ_ONLY="Read-Only? (only you control the session)"
 COM_TOOLS_SHARE="Share"
 COM_TOOLS_SHARE_SESSION="Share session"
-COM_TOOLS_SHARE_SESSION_NOTES="Anyone added for sharing will see your tool session in the <em>My Sessions</em> area of their dashboard. They will be able to manipulate the session unless you check "_QQ_"read-only"_QQ_"."
+COM_TOOLS_SHARE_SESSION_NOTES="Anyone added for sharing will see your tool session in the <em>My Sessions</em> area of their dashboard."
 COM_TOOLS_SHARE_SESSION_NONE="(none)"
 COM_TOOLS_SESSION_SHARED_WITH="This session is shared with:"
 COM_TOOLS_SESSION_READ_ONLY="Readonly"
