[fix] Fixing a language string
[COM_INSTALLER]

--- a/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
+++ b/core/components/com_installer/admin/language/en-GB/en-GB.com_installer.ini
@@ -220,6 +220,7 @@ COM_INSTALLER_PACKAGES_PACKAGES="Packages"
 COM_INSTALLER_PACKAGES_AVAILABLE_VERSIONS="Available Versions"
 COM_INSTALLER_PACKAGES_AVAILABLE_PACKAGES="Available Packages"
 COM_INSTALLER_PACKAGES_INSTALL_VERSION="Install Version"
+COM_INSTALLER_PACKAGES_INSTALL_PACKAGE="Install Package"
 COM_INSTALLER_PACKAGES_REPOSITORIES="Repositories"
 COM_INSTALLER_PACKAGES_REPOSITORY="Repository"
 COM_INSTALLER_PACKAGES_REPOSITORY_NAME="Repository Name"
