[refactor] Add registration IP to member profile
Allow administrators to see the IP that the account was registered with
on the administration panel member page.

Refs: https://nciphub.org/support/ticket/1441

--- a/core/components/com_members/admin/language/en-GB/en-GB.com_members.ini
+++ b/core/components/com_members/admin/language/en-GB/en-GB.com_members.ini
@@ -136,6 +136,7 @@ COM_MEMBERS_COL_ACTION="Action"
 ; Fields
 COM_MEMBERS_FIELD_ACCESS_LEVEL="Visibility"
 COM_MEMBERS_FIELD_REGISTERDATE="Registered"
+COM_MEMBERS_FIELD_REGISTERIP="Registration IP"
 COM_MEMBERS_FIELD_LASTVISITDATE="Last Visit"
 COM_MEMBERS_FIELD_COMPONENT="Component"
 COM_MEMBERS_FIELD_DESCRIPTION="Description"
