--- a/core/plugins/members/projects/language/en-GB/en-GB.plg_members_projects.ini
+++ b/core/plugins/members/projects/language/en-GB/en-GB.plg_members_projects.ini
@@ -73,6 +73,9 @@ PLG_MEMBERS_PROJECTS_ADD="Add Project"
 COM_PROJECTS_MORE="more"
 COM_PROJECTS_ADMIN="Administrator"
 COM_PROJECTS_LESS_THAN_A_MINUTE="less than a minute"
+PLG_MEMBERS_PROJECTS_NEW_INVITATIONS="%s new project invitation(s)"
+PLG_MEMBERS_PROJECTS_INVITED="Projects I am invited to"
+PLG_MEMBERS_PROJECTS_ACCEPT="Accept Invitation"
 
 ; Params
 PLG_MEMBERS_PROJECTS_PARAM_LIMIT_LABEL="Display Limit"
