--- a/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -1007,7 +1007,7 @@ PLG_PROJECTS_PUBLICATIONS_PUBLICATION_NO_DISK_SPACE="We are sorry. Your project 
 PLG_PROJECTS_PUBLICATIONS_ERROR_SAVE_PUBLICATION="Error saving publication"
 PLG_PROJECTS_PUBLICATIONS_ERROR_MISSING_REQUIRED="Missing required information"
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_ERROR_EMBARGO="Embargo period on a publication cannot extend for more than 10 years. Please choose an earlier date."
-
+COM_PUBLICATIONS_ERROR_DOI_NO_SERVICE="The DOI service is either unavailable or returned an error."
 PLG_PROJECTS_PUBLICATIONS_PROJECT_MANAGER="Project manager"
 PLG_PROJECTS_PUBLICATIONS_PROJECT_MEMBER="Project member"
 PLG_PROJECTS_PUBLICATIONS_DRAFT_READY_TO_SUBMIT="OK to submit"
