--- a/app/templates/bmc/language/en-GB/en-GB.tpl_bmc.ini
+++ b/app/templates/bmc/language/en-GB/en-GB.tpl_bmc.ini
@@ -5,11 +5,14 @@
 
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
+TPL_BMC="New QUBES Template"
+TPL_BMC_XML_DESCRIPTION="QUBES site redesign (2018)"
+
 ; Top bar
 TPL_BMC_CONTACT="Contact"
 
 ; Tagline
-TPL_BMC_TAGLINE="CITSCIBIO"
+TPL_BMC_TAGLINE="The power of math x biology x community"
 
 TPL_BMC_MENU="Menu"
 
