--- a/modules/mod_partners/language/en-GB/en-GB.mod_partners.ini
+++ b/modules/mod_partners/language/en-GB/en-GB.mod_partners.ini
@@ -6,6 +6,8 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 MOD_PARTNERS="QUBES Partners"
+
+MOD_PARTNERS_XML_LABEL="QUBES Partners"
 MOD_PARTNERS_XML_DESCRIPTION="This module will display a grid of QUBES Partner logos with links to their QUBES communities."
 
 ; User actions
