[style] Changed styling for license selector.

--- a/app/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/app/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -23,7 +23,7 @@ PLG_PROJECTS_PUBLICATIONS_BUNDLE_NAME="Bundle name:"
 PLG_PROJECTS_PUBLICATIONS_READ_MORE="Read more"
 PLG_PROJECTS_PUBLICATIONS_SELECTOR_LICENSE ="Select a license"
 PLG_PROJECTS_PUBLICATIONS_SELECTOR_SAVE_SELECTION="save selection"
-PLG_PROJECTS_PUBLICATIONS_SELECTOR_REQ_LICENSE="Click on license name for more information."
+PLG_PROJECTS_PUBLICATIONS_SELECTOR_REQ_LICENSE="Please choose one license from the following list."
 PLG_PROJECTS_PUBLICATIONS_EDIT_LICENSE_CHOICE="[change]"
 PLG_PROJECTS_PUBLICATIONS_CURATION_REVIEW_COMPLETE="<strong>Your draft is complete and ready for submission.</strong> Please carefully review information below before submitting draft to be published."
 PLG_PROJECTS_PUBLICATIONS_CURATION_REVIEW_PREVIEW="Preview publication page"
