[fix] Fixing some language strings

--- a/core/modules/mod_version/language/en-GB/en-GB.mod_version.ini
+++ b/core/modules/mod_version/language/en-GB/en-GB.mod_version.ini
@@ -1,5 +1,5 @@
 ; @package      hubzero-cms
-; @file         administrator/language/en-GB/en-GB.mod_version.ini
+; @file         language/en-GB/en-GB.mod_version.ini
 ; @copyright    Copyright 2005-2015 HUBzero Foundation, LLC.
 ; @license      http://opensource.org/licenses/MIT MIT
 
@@ -10,6 +10,6 @@ MOD_VERSION_FORMAT_DESC="The long version includes code name and date"
 MOD_VERSION_FORMAT_LABEL="Version format"
 MOD_VERSION_FORMAT_LONG="Long"
 MOD_VERSION_FORMAT_SHORT="Short"
-MOD_VERSION_PRODUCT_DESC="Include Joomla! name when using short format"
-MOD_VERSION_PRODUCT_LABEL="Show Joomla!"
+MOD_VERSION_PRODUCT_DESC="Include HUBzero name when using short format"
+MOD_VERSION_PRODUCT_LABEL="Show HUBzero"
 MOD_VERSION_XML_DESCRIPTION="This module displays the HUBzero CMS version."
