--- a/core/modules/mod_version/language/en-GB/en-GB.mod_version.sys.ini
+++ b/core/modules/mod_version/language/en-GB/en-GB.mod_version.sys.ini
@@ -1,5 +1,5 @@
 ; @package      hubzero-cms
-; @file         administrator/language/en-GB/en-GB.mod_version.ini
+; @file         language/en-GB/en-GB.mod_version.ini
 ; @copyright    Copyright 2005-2015 HUBzero Foundation, LLC.
 ; @license      http://opensource.org/licenses/MIT MIT
 
