--- a/core/components/com_media/admin/language/en-GB/en-GB.com_media.ini
+++ b/core/components/com_media/admin/language/en-GB/en-GB.com_media.ini
@@ -13,6 +13,7 @@ COM_MEDIA_CLEAR_LIST="Clear List"
 COM_MEDIA_CONFIGURATION="Media Manager Options"
 COM_MEDIA_CREATE_COMPLETE="Create Complete: %s"
 COM_MEDIA_CREATE_FOLDER="Create Folder"
+COM_MEDIA_CREATE="Create"
 COM_MEDIA_FOLDER_NAME="Folder name"
 COM_MEDIA_FOLDER_PATH="Folder path"
 COM_MEDIA_CURRENT_PROGRESS="Current progress"
